[gd_scene load_steps=6 format=3 uid="uid://qw8clvhat4hh"]

[ext_resource type="Script" path="res://character_body_3d.gd" id="1_c6hxv"]
[ext_resource type="PackedScene" uid="uid://ywqi68rykbgb" path="res://src/char_model.tscn" id="2_mini2"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ljo6m"]
margin = 0.01
height = 4.37

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2wl6g"]
margin = 0.02
height = 4.37275

[sub_resource type="SphereShape3D" id="SphereShape3D_s5g2k"]

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
floor_constant_speed = true
floor_snap_length = 0.3
script = ExtResource("1_c6hxv")
_step_height = 0.94

[node name="CharModel" parent="." instance=ExtResource("2_mini2")]

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.23353, 0.172181)
shape = SubResource("CylinderShape3D_ljo6m")

[node name="Collider2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.23353, 0.172181)
shape = SubResource("CapsuleShape3D_2wl6g")
disabled = true

[node name="CamPivotRoot" type="Node3D" parent="."]
transform = Transform3D(0.807733, 0, 0.589549, 0, 1, 0, -0.589549, 0, 0.807733, 0, 2.14964, 0)

[node name="CamPivotHeight" type="Node3D" parent="CamPivotRoot"]
transform = Transform3D(1, 0, 0, 0, 0.757964, 0.652297, 0, -0.652297, 0.757964, 0, 0, 0)

[node name="CamSpring" type="SpringArm3D" parent="CamPivotRoot/CamPivotHeight"]
spring_length = 12.0

[node name="CamTarget" type="Node3D" parent="CamPivotRoot/CamPivotHeight/CamSpring"]

[node name="CheatTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="SinkerDetecter" type="Area3D" parent="."]
collision_layer = 128
collision_mask = 128
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="SinkerDetecter"]
shape = SubResource("SphereShape3D_s5g2k")

[connection signal="timeout" from="CheatTimer" to="." method="_on_cheat_timer_timeout"]
[connection signal="body_entered" from="SinkerDetecter" to="." method="_on_faller_detector_body_entered"]
